--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </td>
         </tr>
         <!-- Iteration 2: Add more products here -->
-        <tr class="Katana">
+        <tr class="product">
           <td class="name">
             <span>Traditional Edo Katana</span>
           </td>
